// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command line options '--only' option does not override the '.skip' run mode flag: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  + external is string?
  - skip external is number?
  - skip internal is string?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      2 skipped, 1 passed, 3 total
Assertions: 2 skipped, 1 passed, 3 total
Duration:   <<timestamp>>

Ran tests matching 'external' in all test files.
"
`;

exports[`command line options '--only' option selects test group to run: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  external
    + is string?
  + external is number?
  - skip internal is string?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 skipped, 2 passed, 3 total
Assertions: 1 skipped, 2 passed, 3 total
Duration:   <<timestamp>>

Ran tests matching 'external' in all test files.
"
`;

exports[`command line options '--only' option selects tests to run: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  + external is string?
  + external is number?
  - skip internal is string?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 skipped, 2 passed, 3 total
Assertions: 1 skipped, 2 passed, 3 total
Duration:   <<timestamp>>

Ran tests matching 'external' in all test files.
"
`;

exports[`command line options '--only' option with '--skip' command line options: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  + external is string?
  - skip external is number?
  - skip internal is string?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      2 skipped, 1 passed, 3 total
Assertions: 2 skipped, 1 passed, 3 total
Duration:   <<timestamp>>

Ran tests matching 'external' and not matching 'number' in all test files.
"
`;

exports[`command line options '--target' option handles multiple targets: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  + is string?

uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  + is string?

Targets:    2 passed, 2 total
Test files: 2 passed, 2 total
Tests:      2 passed, 2 total
Assertions: 2 passed, 2 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`command line options '--target' option handles single target: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  + is string?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 passed, 1 total
Assertions: 1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
